--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build":"parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
